--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           ssh -i ~/.ssh/private_key ${USER}@${EC2_HOST} <<'EOF'
           cd ~/python-scripts/backtesting_app/
           git reset --hard HEAD
-          git pull origin master
+          git pull origin main
           sudo systemctl stop backtesting_app
           sudo systemctl start backtesting_app
         env:
