--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,6 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${EC2_HOST} >> ~/.ssh/known_hosts
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
 
       - name: Write SSH key to file
@@ -31,9 +30,11 @@ jobs:
       - name: Deploy code to EC2
         run: |
           ssh -i ~/.ssh/private_key ${USER}@${EC2_HOST} <<'EOF'
-          cd ~/python-scripts/backtesting-app/
+          cd ${WORKDIR}
           git reset --hard HEAD
           git pull origin main
+          source venv/bin/activate
+          pip install -r requirements.txt
           sudo systemctl stop backtesting_app
           sudo systemctl start backtesting_app
         env:
