--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Deploy code to EC2
         run: |
           ssh -i ~/.ssh/private_key ${USER}@${EC2_HOST} <<'EOF'
-          cd ${WORKDIR}
+          cd ~/code/backtesting-app
           git reset --hard HEAD
           git pull origin main
           source venv/bin/activate
