--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,13 +39,14 @@ jobs:
 
       - name: Deploy code to EC2
         run: |
-          ssh -i ~/.ssh/private_key ${USER}@${EC2_HOST} <<'EOF'
+          ssh -i ~/.ssh/private_key ${USER}@${EC2_HOST} <<-EOF
           cd ${WORKDIR}
           git reset --hard HEAD
           git pull origin main
           source venv/bin/activate
           pip install -r requirements.txt
           sudo systemctl restart streamlit_app
+          EOF
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
