--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,12 @@ __pycache__/
 .env
 .ruff_cache
 .vscode
+backtesting-app.service
 cmds.md
 deploy-to-ec2.md
+docker-compose.traefik.yml
+docker-compose.yml
+Dockerfile
 markets_mapping.json
 strategies.py
 testing_nb.ipynb
