--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,7 @@ jobs:
           cd ${WORKDIR}
           git reset --hard HEAD
           git pull origin main
-          source venv/bin/activate
-          pip install -r requirements.txt
+          uv sync
           sudo systemctl restart backtesting-app
           EOF
         env:
