--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
+[project]
+name = "backtesting-app"
+version = "0.1.0"
+description = ""
+readme = "readme.md"
+requires-python = ">=3.12"
+dependencies = [
+  "matplotlib==3.8.2",
+  "pandas>=2.2.3",
+  "pandas-ta==0.3.14b0",
+  "pendulum==3.0.0",
+  "plotly==5.18.0",
+  "python-dotenv==1.0.1",
+  "setuptools>=75.8.0",
+  "streamlit==1.28.1",
+]
+
+
+[dependency-groups]
+dev = [
+ "pre-commit>=4.1.0",
+ "ruff>=0.9.4",
+]
+
 [tool.ruff]
 target-version = "py312"
 exclude = []
