--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pandas==2.1.2
 pandas-ta==0.3.14b0
 pendulum==3.0.0
 python-dotenv==1.0.1
+python-binance==1.0.27
 plotly==5.18.0
 streamlit==1.28.1
-yfinance==0.2.31
+vectorbt==0.27.2
