add docker compose files

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@ __pycache__/
 backtesting-app.service
 cmds.md
 deploy-to-ec2.md
-docker-compose.traefik.yml
-docker-compose.yml
+docker-compose.override.yml
 Dockerfile
 markets_mapping.json
 strategies.py
