--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    env_file:
-      - .env
     environment:
       - DOMAIN=${DOMAIN}
     command: streamlit run ./src/app.py --server.port 8501
@@ -17,10 +15,10 @@ services:
 
       - traefik.http.services.backtesting-app.loadbalancer.server.port=8501
 
-      - traefik.http.routers.backtesting-app-http.rule=Host(`app.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.backtesting-app-http.rule=Host(`backtesting-app.${DOMAIN?Variable not set}`)
       - traefik.http.routers.backtesting-app-http.entrypoints=http
 
-      - traefik.http.routers.backtesting-app-https.rule=Host(`app.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.backtesting-app-https.rule=Host(`backtesting-app.${DOMAIN?Variable not set}`)
       - traefik.http.routers.backtesting-app-https.entrypoints=https
       - traefik.http.routers.backtesting-app-https.tls=true
       - traefik.http.routers.backtesting-app-https.tls.certresolver=le
