--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           ssh ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
           cd ${{ secrets.WORKDIR }}
+          export DOMAIN=${{ secrets.DOMAIN }}
           docker compose down
           docker compose build
           docker compose up -d
