--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,6 @@ jobs:
           ssh ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
           cd ${{ secrets.WORKDIR }}
           export DOMAIN=${{ secrets.DOMAIN }}
-          docker compose build
-          docker compose up -d
+          docker compose -f "docker-compose.yml" build
+          docker compose -f "docker-compose.yml" up -d
           EOF
